--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation group: 'org.springframework.amqp', name: 'spring-rabbit', version: '2.3.6'
 	implementation "org.apache.camel.springboot:camel-spring-boot-starter:${camelVersion}"
 	implementation "org.apache.camel:camel-rabbitmq:${camelVersion}"
+	implementation "org.apache.camel.springboot:camel-jackson-starter:${camelVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
