--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation "org.apache.camel.springboot:camel-spring-boot-starter:${camelVersion}"
 	implementation "org.apache.camel:camel-rabbitmq:${camelVersion}"
 	implementation "org.apache.camel.springboot:camel-jackson-starter:${camelVersion}"
+	implementation "org.apache.camel.springboot:camel-jacksonxml-starter:${camelVersion}"
+	implementation "org.apache.camel.springboot:camel-kafka-starter:${camelVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
